--- a/app/views/product_lists/_form.haml
+++ b/app/views/product_lists/_form.haml
@@ -78,5 +78,5 @@
       .total
         Total profit:
         %span#total-profit
-          = @product_list.product_profit
+          = @product_list.products.profit
       = f.submit value: 'Save product list', class: 'small success button'
