--- a/app/views/profiles/edit.haml
+++ b/app/views/profiles/edit.haml
@@ -2,7 +2,7 @@
   .row
     .columns
       %ul.breadcrumbs
-        %li= link_to 'Dealerdhips', dealerships_path
+        %li= link_to 'Back', :back
 %main
   .row
     .medium-4.columns
