Legal info added

--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -12,7 +12,7 @@
 
 %ul.sub-nav
   %li
-    = link_to 'Legal info'
+    = link_to 'Legal info', '/PPI Software Services Agreement.doc'
   %li
     = link_to 'How to register'
   %li
