--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -14,6 +14,4 @@
   %li
     = link_to 'Legal info', '/PPI Software Services Agreement.doc'
   %li
-    = link_to 'How to register'
-  %li
-    = link_to 'Support'
+    = mail_to 'support@pieoneers.com', 'Support'
