Interest Rate is increased/decreased according to Pocketbook product selection

--- a/app/views/product_lists/_form.haml
+++ b/app/views/product_lists/_form.haml
@@ -78,5 +78,5 @@
       .total
         Total profit:
         %span#total-profit
-          = @product_list.products.profit
+          = @product_list.products.reduce(0) { |sum, p| sum + p.profit }
       = f.submit value: 'Save product list', class: 'small success button'
