--- a/web/app/assets/stylesheets/_options.scss
+++ b/web/app/assets/stylesheets/_options.scss
@@ -42,6 +42,9 @@
 
       h3 {
         cursor: pointer;
+        font-weight: bold;
+        border-bottom: 1px solid;
+        padding-bottom: 5px;
       }
 
       .product {
