--- a/web/app/views/dealerships/new.html.haml
+++ b/web/app/views/dealerships/new.html.haml
@@ -1,8 +1,7 @@
-%nav
-  .row
-    .columns
-      %ul.breadcrumbs
-        %li= link_to 'Dealerdhips', dealerships_path
+%nav.row
+  .columns
+    %ul.breadcrumbs
+      %li= link_to 'Dealerdhips', dealerships_path
 
 %main
   .row
