--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <div class="medium-2 columns">
           <h1 class="logo">Innovative Pricing Solutions</h1>
         </div>
-        <div class="medium-10 columns">
+        <div class="medium-8 columns">
           <p>Pocketbook Protection, Inc., Vancouver, BC, Canada</p>
           <p>
             <span>1-866-402-6760</span>
@@ -30,6 +30,15 @@
               <span><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></span>
             <% end %>
           </p>
+        </div>
+        <div class="medium-2 columns">
+          <div>
+            <p class="right">
+              Software
+              <br>
+              Patent pending
+            </p>
+          </div>
         </div>
       </div>
     </footer>
