--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -18,11 +18,13 @@
   "foundation/components/switches",
   "foundation/components/inline-lists",
   "foundation/components/pagination",
+  "foundation/components/panels",
   "foundation/components/labels";
 
 @import
   "components/alert-boxes",
   "components/breadcrumbs",
+  "components/debug-panels",
   "components/forms",
   "components/inline-lists",
   "components/typography";
