--- a/web/app/views/options/_product_categories.haml
+++ b/web/app/views/options/_product_categories.haml
@@ -6,6 +6,7 @@
           = category.full_name
 
         - products = @products.select { |p| p.category == category.name }
+
         = of.collection_check_boxes :product_ids, products, :id, :name do |cb|
           .row.product
             .columns.clearfix
@@ -14,14 +15,20 @@
                   = cb.object.name
               .right
                 = cb.check_box
+          - if Rails.application.config.debug
+            .row
+              .columns
+                .debug-panel
+                  Product Tax:
+                  = cb.object.send(:tax_amount).format
 
         - policies = @policies.select { |p| p.category == category.name && p.loan_type == option.loan_type }
         - policies.group_by(&:name).each do |name, policies|
           - insurance_rates = policies.map { |p| p.insurance_rates.map(&:term) }.inject(:&).select { |term| term <= option.term }
           - insurance_terms = option.insurance_terms
           - insurance_term = insurance_terms.detect { |t| policies.include? t.insurance_policy } || InsuranceTerm.new(insurance_policy: policies.first)
-          .row.product
-            = of.fields_for :insurance_terms, insurance_term do |tf|
+          = of.fields_for :insurance_terms, insurance_term do |tf|
+            .row.product
               .columns.clearfix
                 .left
                   = tf.label :insurance_policy_id, name
@@ -39,6 +46,7 @@
                   = tf.text_field :premium, label: false, data: { autonumeric: autonumeric_options }, class: 'premium'
                   = tf.hidden_field :overridden, class: 'overridden'
               = tf.hidden_field :category, value: category.name
+
         - if lender.right? && !i.zero?
           .row.rate
             .columns.clearfix
@@ -48,3 +56,14 @@
             .columns.clearfix
               .left Payment
               .right= category.payment.format
+
+        - if Rails.application.config.debug && lender.right?
+          .row
+            .columns
+              .debug-panel
+                %p
+                  Category Amount:
+                  = category.amount.format
+                %p
+                  Category Buydown Amount:
+                  = category.buydown_amount.format
