--- a/app/views/worksheets/_form.haml
+++ b/app/views/worksheets/_form.haml
@@ -162,6 +162,15 @@
                   = lf.text_field :residual_value, label: false, data: { autonumeric: autonumeric_options }, id: 'lender-r-residual'
                 .small-3.columns
                   = lf.select :residual_unit, residual_units, { label: false }, data: { target: '#lender-r-residual' }, class: 'residual-unit-select'
+        %tr.kickback
+          %th
+          %td.lender-l
+          %td
+          %td.lender-r
+            .row.collapse
+              = f.fields_for :lenders, @lender_r do |lf|
+                .small-12.columns
+                  = lf.check_box :kickback
         %tr
           %th
             Maximum Dollar Amount Approved
