--- a/web/app/views/landing/index.html.haml
+++ b/web/app/views/landing/index.html.haml
@@ -1,4 +1,4 @@
-%h1.logo Innovative Pricing Solutions
+= image_tag 'ips-logo-white', class: 'logo'
 
 .form.row
   .medium-6.large-4.medium-centered.columns
