--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <footer>
       <div class="row">
         <div class="medium-2 columns">
-          <h1 class="logo">Innovative Pricing Solutions</h1>
+          <%= image_tag 'ips-logo-orange', class: 'logo' %>
         </div>
         <div class="medium-8 columns">
           <p>Pocketbook Protection, Inc., Vancouver, BC, Canada</p>
@@ -32,13 +32,9 @@
           </p>
         </div>
         <div class="medium-2 columns">
-          <div>
             <p class="right">
-              Software
-              <br>
-              Patent pending
+              Software <br> Patent pending
             </p>
-          </div>
         </div>
       </div>
     </footer>
