--- a/web/app/assets/stylesheets/_landing.scss
+++ b/web/app/assets/stylesheets/_landing.scss
@@ -1,4 +1,4 @@
-$bg-color: #081226;
+$bg-color: #5d2100;
 
 .landing {
   width: 100%;
@@ -18,7 +18,7 @@ $bg-color: #081226;
     background-size: cover;
     background-position: center center;
     z-index: -1;
-    opacity: 0.45;
+    //opacity: 0.45;
   }
 
   .logo, .sub-nav, footer {
@@ -31,6 +31,7 @@ $bg-color: #081226;
 
   .logo {
     width: 18rem;
+    height: 9rem;
   }
 
   a {
@@ -51,12 +52,12 @@ $bg-color: #081226;
       height: rem-calc(50);
       padding: 0 rem-calc(20);
       color: inherit;
-      background-color: rgba($bg-color, 0.25);
+      background-color: rgba($bg-color, 0.5);
       border-color: white;
       font-size: rem-calc(16);
 
       &:focus {
-        background-color: rgba($bg-color, 0.5);
+        background-color: rgba($bg-color, 0.75);
       }
 
       &::placeholder {
@@ -71,6 +72,14 @@ $bg-color: #081226;
 
     .button {
       width: 100%;
+      border: 2px solid #fff;
+      border-radius: 0;
+      background-color: #1b81c1;
+      transition-duration: 200ms;
+
+      &:hover {
+        background-color: #f45914;
+      }
     }
   }
 
