--- a/web/app/views/landing/index.html.haml
+++ b/web/app/views/landing/index.html.haml
@@ -1,7 +1,7 @@
 = image_tag 'ips-logo-white', class: 'logo'
 
 .form.row
-  .medium-6.large-4.medium-centered.columns
+  .medium-6.medium-centered.columns
     = form_for :user, url: session_path(:user) do |f|
       = f.text_field :email, label: false, placeholder: 'Email', autofocus: true
       = f.password_field :password, label: false, placeholder: 'Password'
