Changed Designed to Developed

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <span><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></span>
             <% end %>
           </p>
-          <p>Designed by <%= link_to 'Pieoneers', 'http://pieoneers.com/' %></p>
+          <p>Developed by <%= link_to 'Pieoneers', 'http://pieoneers.com/' %></p>
         </div>
         <div class="medium-2 columns">
             <p class="right">
