email address updated

--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <p>Pocketbook Protection, Inc., Vancouver, BC, Canada</p>
           <p>
             <span>1-866-402-6760</span>
-            <span><%= mail_to 'info@pocketbookprotection.com' %></span>
+            <span><%= mail_to 'info@innovativepricingsolutions.com' %></span>
             <% if user_signed_in? %>
               <span><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></span>
             <% end %>
