phone number removed

--- a/web/app/views/layouts/mailer.html.erb
+++ b/web/app/views/layouts/mailer.html.erb
@@ -13,7 +13,7 @@
       <td style="width: 8em; margin: 0; padding-top: 1em; font-size: 12px; font-weight: 900; line-height: 1em; text-transform: uppercase;">Innovative Pricing Solutions</td>
       <td style="padding-top: 1em; color: #aaaaaa; font-size: 12px;">
         Pocketbook Protection, Inc., Vancouver, BC, Canada<br />
-        Phone number: 1-866-402-6760 • Email: <a href="mailto:info@innovativepricingsolutions.com" style="color: #aaaaaa;">info@innovativepricingsolutions.com</a>
+        Email: <a href="mailto:info@innovativepricingsolutions.com" style="color: #aaaaaa;">info@innovativepricingsolutions.com</a>
       </td>
     </tr>
   </table>
