--- a/app/views/options/show.pdf.haml
+++ b/app/views/options/show.pdf.haml
@@ -122,4 +122,5 @@
         .small-12.columns
           &copy;
           = Time.now.year
-          Pocketbook Protection Inc. Unauthorized reproduction strictly prohibited.
+          = t :company_legal_name
+          Unauthorized reproduction strictly prohibited.
