--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -12,7 +12,7 @@
     <tr style="vertical-align: top;">
       <td style="width: 8em; margin: 0; padding-top: 1em; font-size: 12px; font-weight: 900; line-height: 1em; text-transform: uppercase;">Innovative Pricing Solutions</td>
       <td style="padding-top: 1em; color: #aaaaaa; font-size: 12px;">
-        IPS Software, Ltd., Vancouver, BC, Canada<br />
+        <%= t :company_legal_name %>, Vancouver, BC, Canada<br />
         Email: <a href="mailto:info@innovativepricingsolutions.com" style="color: #aaaaaa;">info@innovativepricingsolutions.com</a>
       </td>
     </tr>
