Add new legal info

--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -13,3 +13,5 @@
 %ul.sub-nav
   %li
     = mail_to 'support@pieoneers.com', 'Support'
+  %li
+    = link_to 'Legal info', '/IPS%20Software%20Services%20Terms%20and%20Conditions.pdf'
