--- a/app/views/worksheets/show.haml
+++ b/app/views/worksheets/show.haml
@@ -205,12 +205,12 @@
                 %small ($)
               %td
                 = f.fields_for :lenders, @lender_l do |lf|
-                  = lf.text_field :max_amount, label: false, data: { autonumeric: autonumeric_options }
+                  = lf.text_field :max_amount, label: false, data: { autonumeric: autonumeric_options }, class: 'autoclear'
               %td
                 = cross_copy(:max_amount)
               %td
                 = f.fields_for :lenders, @lender_r do |lf|
-                  = lf.text_field :max_amount, label: false, data: { autonumeric: autonumeric_options }
+                  = lf.text_field :max_amount, label: false, data: { autonumeric: autonumeric_options }, class: 'autoclear'
             %tr
               %th
                 Rates
