FIX 500 error when trying to open deal's product list page using admin account

--- a/app/views/product_lists/edit.html.haml
+++ b/app/views/product_lists/edit.html.haml
@@ -5,14 +5,14 @@
         - if admin?
           %li
             = link_to 'Dealerships', dealerships_path
-          %li.current
-            = @product_list.master? ? 'Master Product List' : @listable.name
 
-        - if financial_manager?
-          %li= link_to 'Deals', deals_path
+        %li= link_to 'Deals', deals_path
 
-          - if @product_list.listable_type == "Deal"
-            %li= link_to @listable.client.name, deal_path(@listable)
+        - if @product_list.master?
+          %li
+            Master Product List
+        - elsif @product_list.listable_type == "Deal"
+          %li= link_to @listable.client.name, deal_path(@listable)
 %main
   .row
     .columns
