--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,4 +34,9 @@
   "dealerships",
   "deals",
   "product_lists",
-  "worksheets";
+  "worksheets",
+  "video";
+
+@import "plyr";
+@import "owl.carousel";
+@import "owl.theme.default";
