--- a/app/views/deals/index.html.haml
+++ b/app/views/deals/index.html.haml
@@ -4,7 +4,7 @@
     %span.buttons
       = link_to 'Default Product List', edit_product_list_path, class: 'button'
       = link_to 'Profile', edit_profile_path, class: 'button'
-      = link_to 'Video', video_index_path, class: 'button video-button'
+      = link_to 'Training Videos', video_index_path, class: 'button video-button'
       
 %main
   .row
